--- a/src/css/aside.css
+++ b/src/css/aside.css
@@ -3,16 +3,15 @@
   width: 100%; 
   min-height: 100vh;
   height: auto;
-  background-image: url("../assets/images/bg-pattern.png");
-  background-size: 100% 100%;
-  background-position: bottom center ;
-  background-repeat: no-repeat;
+
   position: relative;
   top: 0;
   bottom: 0;
   display: flex;
   flex-direction: column;
   justify-content: center;
+  background-color: var(--white);
+  box-shadow: 0 0 5rem 1rem rgba(0, 0, 0, 0.1);
 }
 .overflow{
   min-height: 992px;
@@ -37,9 +36,12 @@
   font-size: clamp(2.5rem, 8vw, 5rem);
   line-height: 1.25;
   color: var(--white);
+  color: var(--black-200);
 }
 .parag {
   color: var(--white-100);
+  color: var(--black-200);
+
   margin-top: 1rem;
 }
 .aside-img {
@@ -58,6 +60,8 @@
   align-items: center;
   justify-content: space-between;
   background: var(--gradient2);
+  background: var(--gradient);
+
   margin-top: 4rem;
   height: 4.8rem;
   padding: 0 2.5rem;
@@ -81,18 +85,8 @@
 
 }
 .dark {
-  background-color: var(--black-300);
+  background-color: var(--black-200);
   transition: 0.3s ease-in-out;
   transform: translateX(1rem);
   color: var(--white);
-}
-.overlay{
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  height: 20%;
-  background-color: var(--black-200);
-  z-index: 1;
-  transition: .3s ease-in-out;
 }
