--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
   position: relative;
   width: 100%;
   min-height: 100vh;
-  background-image: url("./assets/images/5.png");
+  background-image: url("./assets/images/light-bg.png");
   background-position: top center;
 
   background-size: cover;
@@ -25,7 +25,7 @@
   gap: 4rem;
 }
 p {
-  font-size: 1.8rem;
+  font-size: 1.6rem;
   line-height: 1.6;
   color: var(--white-300);
 }
@@ -41,9 +41,9 @@ button {
 fieldset{
   border: none;
 }
-/* DARK MODE...... */
+/* ONLY COMMON DARK MODE STYLES...... */
 .outer-bg-dark{
-  background-image: url("./assets/images/6.png");
+  background-image: url("./assets/images/dark-bg.png");
 }
 .steps-bg-dark{
   transition: .3s ease-in-out;
@@ -51,7 +51,6 @@ fieldset{
   box-shadow: 0 0 2rem 1rem #0a4f7d4f;
   color: var(--white-200);
   border-color: inherit!important;
-
 }
 .cards-bg-dark{
   background-color: var(--black-200)!important;
@@ -68,9 +67,7 @@ fieldset{
 .medium-text-dark{
 color: var(--white-200)!important;
 }
-.aside-dark{
-  background: var(--black-400)!important;
-}
+
 .icon-wrapper-dark{
   background-color: var(--black-400)!important;
 }
