--- a/src/css/contact.css
+++ b/src/css/contact.css
@@ -57,14 +57,7 @@
   color: var(--white);
 }
 
-/* .aside-wrapper.cards-bg-dark:before{
-    background-color: var(--black-200);
-   
-}
-.form-wrapper.cards-bg-dark:before{
-    background-color: var(--black-200);
-   
-} */
+
 .steps-header-text {
   margin-top: 3.5rem;
   margin-left: 5px;
@@ -74,20 +67,23 @@
   color: var(--black-100);
 }
 .step-header-parag {
-  max-width: 420px;
+  max-width: 400px;
   width: 100%;
   margin-top: 1rem;
+  font-size: 1.6rem;
 }
 .error-badge {
   display: flex;
   align-items: center;
-  max-width: 380px;
+  max-width: 350px;
   width: 100%;
   position: absolute;
-  right: 5rem;
-  top: 5rem;
+  right: 2.5rem;
+  top: 10rem;
   z-index: 10;
 }
 .error-text {
-  font-size: 1.6rem;
+  font-size: 1.3rem;
+  font-weight: 600;
 }
+
