--- a/src/css/step5.css
+++ b/src/css/step5.css
@@ -9,6 +9,8 @@
   padding: 5rem 4rem;
   border-radius: 1.5rem;
   text-align: center;
+  box-shadow: 0 0 5rem 1rem rgba(0, 0, 0, 0.1);
+
 }
 .step5-icon {
   width: 8rem;
@@ -20,7 +22,9 @@
     color: var(--black-200);
 }
 .step5-parag{
+  max-width: 550px;
     margin-top: 1rem;
+    width: 100%;
 }
 .reset-btn{
     margin-top: 4rem;
