--- a/src/css/step5.css
+++ b/src/css/step5.css
@@ -1,5 +1,5 @@
 .step5-wrapper {
-    max-width: 750px;
+    max-width: 760px;
     width: 100%;
   display: flex;
   align-items: center;
@@ -10,6 +10,7 @@
   border-radius: 1.5rem;
   text-align: center;
   box-shadow: 0 0 5rem 1rem rgba(0, 0, 0, 0.1);
+  margin-top: 4rem;
 
 }
 .step5-icon {
@@ -36,4 +37,7 @@
     padding: 0 3rem;
     font-size: 1.6rem;
     font-weight: 600;
+}
+.dark-btn:hover{
+  color: white!important;
 }
