--- a/src/App.css
+++ b/src/App.css
@@ -44,6 +44,7 @@ fieldset{
 /* ONLY COMMON DARK MODE STYLES...... */
 .outer-bg-dark{
   background-image: url("./assets/images/dark-bg.png");
+  transition: .3s ease-in-out;
 }
 .steps-bg-dark{
   transition: .3s ease-in-out;
